@@ -123,18 +123,6 @@ determine_real_args() {
 	DMRAID_BINCACHE=`arch_replace "${DMRAID_BINCACHE}"`
 	BLKID_BINCACHE=`arch_replace "${BLKID_BINCACHE}"`
 	
-
-	if [ "${CMD_BOOTLOADER}" != '' ]
-	then
-		BOOTLOADER="${CMD_BOOTLOADER}"
-
-		if [ "${CMD_BOOTLOADER}" != "${CMD_BOOTLOADER/:/}" ]
-	then
-			BOOTFS=`echo "${CMD_BOOTLOADER}" | cut -f2- -d:`
-			BOOTLOADER=`echo "${CMD_BOOTLOADER}" | cut -f1 -d:`
-	fi
-	fi
-
 	if [ "${NO_KERNEL_SOURCES}" != "1" ]
 	then
 		if [ ! -d ${KERNEL_DIR} ]
