@@ -38,9 +38,6 @@ SAVE_CONFIG="yes"
 # Use Color output in Genkernel?
 USECOLOR="yes"
 
-# Add new kernel to grub?
-# BOOTLOADER="grub"
-
 # Clear build cache dir
 # CLEAR_CACHE_DIR="yes"
 
